<resources>
    <string name="app_name">AppImporvultec</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="signin_title">Bienvenido</string>
    <string name="signin_subtitle">Inicio de sesión con Google</string>
    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="Nombre">Nombres: </string>
    <string name="Correo">Correo electrónico: </string>
    <string name="CerrarSesion">Cerrar Sesión</string>
    <string name="Titulo">Pruebas</string>
    <string name="no_cierre_sesion">No se pudo cerrar sesión</string>
    <string name="Chats">Chats</string>
    <string name="Productos">Productos</string>
    <string name="Pedidos">Pedidos</string>
    <string name="Soporte">Soporte</string>
    <string name="Usuarios">USUARIOS</string>
</resources>