<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#404d5e"
    tools:context=".Menu.Producto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <!--DATOS RECUPERADOS-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="10dp">

                <!--MAS DATOS-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <!--Categoría-->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/nametextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="CATEGORÍA"
                            android:textColor="#000" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--MENU DE OPCIONES-->

                <!--OPCIONES 1-2-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/autocaravana" />

                        <Button
                            android:id="@+id/Op1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Productos"
                            android:textColor="#fff" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/camiongrande" />

                        <Button
                            android:id="@+id/Op2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/Pedidos"
                            android:textColor="#fff" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--OPCIONES 3-4-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/grua" />

                        <Button
                            android:id="@+id/Op3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Chats"
                            android:textColor="#fff" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/motocicleta" />

                        <Button
                            android:id="@+id/Op4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/Titulo"
                            android:textColor="#fff" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--OPCIONES 5-6-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/recoger" />

                        <Button
                            android:id="@+id/Op5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Soporte"
                            android:textColor="#fff" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/todoterreno" />

                        <Button
                            android:id="@+id/op6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/CerrarSesion"
                            android:textColor="#fff" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>