<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#404d5e"
    tools:context=".Principal_Menu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">


            <!--FONDO PORTADA-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="center"
                android:src="@drawable/carruselejemplo1" />

            <!--DATOS RECUPERADOS-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical"
                android:padding="10dp">

                <!--FOTO DE PERFIL-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/photoimageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="50dp"
                    android:background="#404d5e"
                    android:padding="3dp"
                    android:scaleType="center"/>

                <!--MAS DATOS-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <!--Nombre-->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/nametextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Nombre de Usuario"
                            android:textColor="#000" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <!--Correo-->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/emailtextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Correo de Usuario"
                            android:textColor="#000" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--MENU DE OPCIONES-->

                <!--OPCIONES 1-2-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/tienda" />

                        <Button
                            android:id="@+id/Opcion1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Productos"
                            android:textColor="#fff" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/pedidos" />

                        <Button
                            android:id="@+id/Opcion2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/Pedidos"
                            android:textColor="#fff" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--OPCIONES 3-4-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/charla" />

                        <Button
                            android:id="@+id/Opcion3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Chats"
                            android:textColor="#fff" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/prueba" />

                        <Button
                            android:id="@+id/Opcion4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/Titulo"
                            android:textColor="#fff" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--OPCIONES 5-6-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/soporte" />

                        <Button
                            android:id="@+id/Opcion5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Soporte"
                            android:textColor="#fff" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/cerrarsesion" />

                        <Button
                            android:id="@+id/CerrarSesion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:onClick="logOut"
                            android:text="@string/CerrarSesion"
                            android:textColor="#fff" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>


    </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>