<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#404d5e"
    tools:context=".MenuAdministrador.PrincipalMenuAdministrador">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <ViewFlipper
                android:id="@+id/Carrusel"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <!--DATOS RECUPERADOS-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical"
                android:padding="10dp">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/photoimageView_A"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:civ_border_color="#404d5e"
                    app:civ_border_width="4dp"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="0dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="50dp"
                    app:civ_shadow_color="#3f51b5"/>

                <!--MAS DATOS-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <!--Nombre-->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/nametextView_A"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Nombre de Usuario"
                            android:textSize="20dp"
                            android:textColor="#25CD8A" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <!--Correo-->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/emailtextView_A"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Correo de Usuario"
                            android:textSize="15dp"
                            android:textColor="#25CD8A" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--MENU DE OPCIONES-->

                <!--OPCIONES 1-2-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/tienda" />

                        <Button
                            android:id="@+id/OpcionProductos_A"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Productos"
                            android:background="@drawable/button_rounded_border"
                            android:textColor="#fff" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/pedidos" />

                        <Button
                            android:id="@+id/OpcionPedidos_A"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/Pedidos"
                            android:background="@drawable/button_rounded_border"
                            android:textColor="#fff" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--OPCIONES 3-4-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/charla" />

                        <Button
                            android:id="@+id/OpcionChats_A"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Chats"
                            android:background="@drawable/button_rounded_border"
                            android:textColor="#fff" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/imgUsuarios"
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/usuario" />

                        <Button
                            android:id="@+id/OpcionUsuarios"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Usuarios"
                            android:background="@drawable/button_rounded_border"
                            android:textColor="#fff" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--OPCIONES 5-6-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">



                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/cerrarsesion" />

                        <Button
                            android:id="@+id/CerrarSesion_A"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:onClick="logOut"
                            android:layout_gravity="center"
                            android:text="@string/CerrarSesion"
                            android:background="@drawable/button_rounded_border"
                            android:textColor="#fff" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </RelativeLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>